# butter-tts

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  lib.rs  logging.rs  main.rs  settings.rs  transcripts.rs
src-tauri/src/audio/: capture.rs  denoise.rs  mod.rs  utterance.rs
src-tauri/src/discord/: commands.rs  mod.rs  session.rs  voice.rs
src-tauri/src/openai/: mod.rs  stt.rs  tts.rs
src-tauri/src/store/: crypto.rs  mod.rs  settings.rs  transcripts.rs
src-tauri/tests/: database_location.rs
src/lib/: ContextMenu.svelte  RevealButton.svelte  bot.svelte.ts  settings.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/console/: +page.svelte
src/routes/docs/: +page.svelte
src/routes/history/: +page.svelte
src/routes/settings/: +page.svelte
